--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@once-ui-system/docs",
+  "name": "@remixrepo/fast-ui-docs",
   "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "prebuild": "pnpm --filter @once-ui-system/core build",
-    "postinstall": "pnpm --filter @once-ui-system/core build",
+    "prebuild": "pnpm --filter @remixrepo/fast-ui-core build",
+    "postinstall": "pnpm --filter @remixrepo/fast-ui-core build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -17,7 +17,7 @@
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.5.4",
-    "@once-ui-system/core": "workspace:*",
+    "@remixrepo/fast-ui-core": "workspace:*",
     "@vercel/analytics": "^1.3.1",
     "classnames": "^2.5.1",
     "eslint": "^9.21.0",
