--- a/packages/core/tsconfig.build.json
+++ b/packages/core/tsconfig.build.json
@@ -7,12 +7,15 @@
     "sourceMap": true,
     "noEmit": false,
     "module": "ES2022",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
+    "target": "ES2020",
     "jsx": "react-jsx",
     "skipLibCheck": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "verbatimModuleSyntax": false,
+    "preserveValueImports": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.*", "**/*.stories.*"]
